project(TKDCAF)

if (WIN32)
  list( APPEND TKDCAF_PRECOMPILED_DEFS "-D__DDF_DLL" )
  list( APPEND TKDCAF_PRECOMPILED_DEFS "-D__DDocStd_DLL" )
  list( APPEND TKDCAF_PRECOMPILED_DEFS "-D__DNaming_DLL" )
  list( APPEND TKDCAF_PRECOMPILED_DEFS "-D__DDataStd_DLL" )
  list( APPEND TKDCAF_PRECOMPILED_DEFS "-D__DPrsStd_DLL" )
  list( APPEND TKDCAF_PRECOMPILED_DEFS "-D__DrawDim_DLL" )
  string( REGEX REPLACE ";" " " TKDCAF_PRECOMPILED_DEFS "${TKDCAF_PRECOMPILED_DEFS}")
endif()

  list( APPEND TKDCAF_COMPILER_DIRECTORIES "${WOK_LIB_PATH}" )
  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}/inc")
    list( APPEND TKDCAF_COMPILER_DIRECTORIES "${BUILD_PATCH_DIR}/inc" )
  ENDIF()
  IF(EXISTS "${CMAKE_SOURCE_DIR}/inc")
    list( APPEND TKDCAF_COMPILER_DIRECTORIES "${CMAKE_SOURCE_DIR}/inc" )
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "")
    IF(EXISTS "${BUILD_PATCH_DIR}/drv/DDF")
      list( APPEND TKDCAF_COMPILER_DIRECTORIES "${BUILD_PATCH_DIR}/drv/DDF" )
    ENDIF()
    IF(EXISTS "${BUILD_PATCH_DIR}/src/DDF")
      list( APPEND TKDCAF_COMPILER_DIRECTORIES "${BUILD_PATCH_DIR}/src/DDF" )
    ENDIF()

    IF(EXISTS "${BUILD_PATCH_DIR}/drv/DDocStd")
      list( APPEND TKDCAF_COMPILER_DIRECTORIES "${BUILD_PATCH_DIR}/drv/DDocStd" )
    ENDIF()
    IF(EXISTS "${BUILD_PATCH_DIR}/src/DDocStd")
      list( APPEND TKDCAF_COMPILER_DIRECTORIES "${BUILD_PATCH_DIR}/src/DDocStd" )
    ENDIF()

    IF(EXISTS "${BUILD_PATCH_DIR}/drv/DNaming")
      list( APPEND TKDCAF_COMPILER_DIRECTORIES "${BUILD_PATCH_DIR}/drv/DNaming" )
    ENDIF()
    IF(EXISTS "${BUILD_PATCH_DIR}/src/DNaming")
      list( APPEND TKDCAF_COMPILER_DIRECTORIES "${BUILD_PATCH_DIR}/src/DNaming" )
    ENDIF()

    IF(EXISTS "${BUILD_PATCH_DIR}/drv/DDataStd")
      list( APPEND TKDCAF_COMPILER_DIRECTORIES "${BUILD_PATCH_DIR}/drv/DDataStd" )
    ENDIF()
    IF(EXISTS "${BUILD_PATCH_DIR}/src/DDataStd")
      list( APPEND TKDCAF_COMPILER_DIRECTORIES "${BUILD_PATCH_DIR}/src/DDataStd" )
    ENDIF()

    IF(EXISTS "${BUILD_PATCH_DIR}/drv/DPrsStd")
      list( APPEND TKDCAF_COMPILER_DIRECTORIES "${BUILD_PATCH_DIR}/drv/DPrsStd" )
    ENDIF()
    IF(EXISTS "${BUILD_PATCH_DIR}/src/DPrsStd")
      list( APPEND TKDCAF_COMPILER_DIRECTORIES "${BUILD_PATCH_DIR}/src/DPrsStd" )
    ENDIF()

    IF(EXISTS "${BUILD_PATCH_DIR}/drv/DrawDim")
      list( APPEND TKDCAF_COMPILER_DIRECTORIES "${BUILD_PATCH_DIR}/drv/DrawDim" )
    ENDIF()
    IF(EXISTS "${BUILD_PATCH_DIR}/src/DrawDim")
      list( APPEND TKDCAF_COMPILER_DIRECTORIES "${BUILD_PATCH_DIR}/src/DrawDim" )
    ENDIF()

  ENDIF()

  IF(EXISTS "${CMAKE_SOURCE_DIR}/drv/DDF")
    list( APPEND TKDCAF_COMPILER_DIRECTORIES "${CMAKE_SOURCE_DIR}/drv/DDF" )
  ENDIF()
  IF(EXISTS "${CMAKE_SOURCE_DIR}/src/DDF")
    list( APPEND TKDCAF_COMPILER_DIRECTORIES "${CMAKE_SOURCE_DIR}/src/DDF" )
  ENDIF()

  IF(EXISTS "${CMAKE_SOURCE_DIR}/drv/DDocStd")
    list( APPEND TKDCAF_COMPILER_DIRECTORIES "${CMAKE_SOURCE_DIR}/drv/DDocStd" )
  ENDIF()
  IF(EXISTS "${CMAKE_SOURCE_DIR}/src/DDocStd")
    list( APPEND TKDCAF_COMPILER_DIRECTORIES "${CMAKE_SOURCE_DIR}/src/DDocStd" )
  ENDIF()

  IF(EXISTS "${CMAKE_SOURCE_DIR}/drv/DNaming")
    list( APPEND TKDCAF_COMPILER_DIRECTORIES "${CMAKE_SOURCE_DIR}/drv/DNaming" )
  ENDIF()
  IF(EXISTS "${CMAKE_SOURCE_DIR}/src/DNaming")
    list( APPEND TKDCAF_COMPILER_DIRECTORIES "${CMAKE_SOURCE_DIR}/src/DNaming" )
  ENDIF()

  IF(EXISTS "${CMAKE_SOURCE_DIR}/drv/DDataStd")
    list( APPEND TKDCAF_COMPILER_DIRECTORIES "${CMAKE_SOURCE_DIR}/drv/DDataStd" )
  ENDIF()
  IF(EXISTS "${CMAKE_SOURCE_DIR}/src/DDataStd")
    list( APPEND TKDCAF_COMPILER_DIRECTORIES "${CMAKE_SOURCE_DIR}/src/DDataStd" )
  ENDIF()

  IF(EXISTS "${CMAKE_SOURCE_DIR}/drv/DPrsStd")
    list( APPEND TKDCAF_COMPILER_DIRECTORIES "${CMAKE_SOURCE_DIR}/drv/DPrsStd" )
  ENDIF()
  IF(EXISTS "${CMAKE_SOURCE_DIR}/src/DPrsStd")
    list( APPEND TKDCAF_COMPILER_DIRECTORIES "${CMAKE_SOURCE_DIR}/src/DPrsStd" )
  ENDIF()

  IF(EXISTS "${CMAKE_SOURCE_DIR}/drv/DrawDim")
    list( APPEND TKDCAF_COMPILER_DIRECTORIES "${CMAKE_SOURCE_DIR}/drv/DrawDim" )
  ENDIF()
  IF(EXISTS "${CMAKE_SOURCE_DIR}/src/DrawDim")
    list( APPEND TKDCAF_COMPILER_DIRECTORIES "${CMAKE_SOURCE_DIR}/src/DrawDim" )
  ENDIF()

IF (WIN32)
  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "")
  ENDIF()

ELSE()
  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "")
  ENDIF()

ENDIF()

  list( APPEND TKDCAF_USED_LIBS TKGeomBase )
  list( APPEND TKDCAF_USED_LIBS TKBRep )
  list( APPEND TKDCAF_USED_LIBS TKGeomAlgo )
  list( APPEND TKDCAF_USED_LIBS TKernel )
  list( APPEND TKDCAF_USED_LIBS TKMath )
  list( APPEND TKDCAF_USED_LIBS TKG2d )
  list( APPEND TKDCAF_USED_LIBS TKG3d )
  list( APPEND TKDCAF_USED_LIBS TKDraw )
  list( APPEND TKDCAF_USED_LIBS TKCDF )
  list( APPEND TKDCAF_USED_LIBS TKV3d )
  list( APPEND TKDCAF_USED_LIBS TKNIS )
  list( APPEND TKDCAF_USED_LIBS TKService )
  list( APPEND TKDCAF_USED_LIBS TKLCAF )
  list( APPEND TKDCAF_USED_LIBS TKFillet )
  list( APPEND TKDCAF_USED_LIBS TKTopAlgo )
  list( APPEND TKDCAF_USED_LIBS TKPrim )
  list( APPEND TKDCAF_USED_LIBS TKBool )
  list( APPEND TKDCAF_USED_LIBS TKBO )
  list( APPEND TKDCAF_USED_LIBS TKCAF )
  list( APPEND TKDCAF_USED_LIBS TKViewerTest )

if (WIN32)
elseif(APPLE)
elseif(ANDROID)
else()
endif()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//drv/DDF/DDF_ListIteratorOfTransactionStack_0.cxx")
    list( APPEND TKDCAF_USED_SRCFILES "${BUILD_PATCH_DIR}//drv/DDF/DDF_ListIteratorOfTransactionStack_0.cxx" )
    SOURCE_GROUP (DDF FILES "${BUILD_PATCH_DIR}//drv/DDF/DDF_ListIteratorOfTransactionStack_0.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//drv/DDF/DDF_ListIteratorOfTransactionStack_0.cxx")
      list( APPEND TKDCAF_USED_SRCFILES "${CMAKE_SOURCE_DIR}//drv/DDF/DDF_ListIteratorOfTransactionStack_0.cxx" )
      SOURCE_GROUP (DDF FILES "${CMAKE_SOURCE_DIR}//drv/DDF/DDF_ListIteratorOfTransactionStack_0.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//drv/DDF/DDF_ListNodeOfTransactionStack_0.cxx")
    list( APPEND TKDCAF_USED_SRCFILES "${BUILD_PATCH_DIR}//drv/DDF/DDF_ListNodeOfTransactionStack_0.cxx" )
    SOURCE_GROUP (DDF FILES "${BUILD_PATCH_DIR}//drv/DDF/DDF_ListNodeOfTransactionStack_0.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//drv/DDF/DDF_ListNodeOfTransactionStack_0.cxx")
      list( APPEND TKDCAF_USED_SRCFILES "${CMAKE_SOURCE_DIR}//drv/DDF/DDF_ListNodeOfTransactionStack_0.cxx" )
      SOURCE_GROUP (DDF FILES "${CMAKE_SOURCE_DIR}//drv/DDF/DDF_ListNodeOfTransactionStack_0.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//drv/DDF/DDF_TransactionStack_0.cxx")
    list( APPEND TKDCAF_USED_SRCFILES "${BUILD_PATCH_DIR}//drv/DDF/DDF_TransactionStack_0.cxx" )
    SOURCE_GROUP (DDF FILES "${BUILD_PATCH_DIR}//drv/DDF/DDF_TransactionStack_0.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//drv/DDF/DDF_TransactionStack_0.cxx")
      list( APPEND TKDCAF_USED_SRCFILES "${CMAKE_SOURCE_DIR}//drv/DDF/DDF_TransactionStack_0.cxx" )
      SOURCE_GROUP (DDF FILES "${CMAKE_SOURCE_DIR}//drv/DDF/DDF_TransactionStack_0.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/DDF/DDF.cxx")
    list( APPEND TKDCAF_USED_SRCFILES "${BUILD_PATCH_DIR}//src/DDF/DDF.cxx" )
    SOURCE_GROUP (DDF FILES "${BUILD_PATCH_DIR}//src/DDF/DDF.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/DDF/DDF.cxx")
      list( APPEND TKDCAF_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/DDF/DDF.cxx" )
      SOURCE_GROUP (DDF FILES "${CMAKE_SOURCE_DIR}//src/DDF/DDF.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/DDF/DDF_AttributeBrowser.cxx")
    list( APPEND TKDCAF_USED_SRCFILES "${BUILD_PATCH_DIR}//src/DDF/DDF_AttributeBrowser.cxx" )
    SOURCE_GROUP (DDF FILES "${BUILD_PATCH_DIR}//src/DDF/DDF_AttributeBrowser.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/DDF/DDF_AttributeBrowser.cxx")
      list( APPEND TKDCAF_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/DDF/DDF_AttributeBrowser.cxx" )
      SOURCE_GROUP (DDF FILES "${CMAKE_SOURCE_DIR}//src/DDF/DDF_AttributeBrowser.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/DDF/DDF_BasicCommands.cxx")
    list( APPEND TKDCAF_USED_SRCFILES "${BUILD_PATCH_DIR}//src/DDF/DDF_BasicCommands.cxx" )
    SOURCE_GROUP (DDF FILES "${BUILD_PATCH_DIR}//src/DDF/DDF_BasicCommands.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/DDF/DDF_BasicCommands.cxx")
      list( APPEND TKDCAF_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/DDF/DDF_BasicCommands.cxx" )
      SOURCE_GROUP (DDF FILES "${CMAKE_SOURCE_DIR}//src/DDF/DDF_BasicCommands.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/DDF/DDF_Browser.cxx")
    list( APPEND TKDCAF_USED_SRCFILES "${BUILD_PATCH_DIR}//src/DDF/DDF_Browser.cxx" )
    SOURCE_GROUP (DDF FILES "${BUILD_PATCH_DIR}//src/DDF/DDF_Browser.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/DDF/DDF_Browser.cxx")
      list( APPEND TKDCAF_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/DDF/DDF_Browser.cxx" )
      SOURCE_GROUP (DDF FILES "${CMAKE_SOURCE_DIR}//src/DDF/DDF_Browser.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/DDF/DDF_BrowserCommands.cxx")
    list( APPEND TKDCAF_USED_SRCFILES "${BUILD_PATCH_DIR}//src/DDF/DDF_BrowserCommands.cxx" )
    SOURCE_GROUP (DDF FILES "${BUILD_PATCH_DIR}//src/DDF/DDF_BrowserCommands.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/DDF/DDF_BrowserCommands.cxx")
      list( APPEND TKDCAF_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/DDF/DDF_BrowserCommands.cxx" )
      SOURCE_GROUP (DDF FILES "${CMAKE_SOURCE_DIR}//src/DDF/DDF_BrowserCommands.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/DDF/DDF_Data.cxx")
    list( APPEND TKDCAF_USED_SRCFILES "${BUILD_PATCH_DIR}//src/DDF/DDF_Data.cxx" )
    SOURCE_GROUP (DDF FILES "${BUILD_PATCH_DIR}//src/DDF/DDF_Data.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/DDF/DDF_Data.cxx")
      list( APPEND TKDCAF_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/DDF/DDF_Data.cxx" )
      SOURCE_GROUP (DDF FILES "${CMAKE_SOURCE_DIR}//src/DDF/DDF_Data.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/DDF/DDF_DataCommands.cxx")
    list( APPEND TKDCAF_USED_SRCFILES "${BUILD_PATCH_DIR}//src/DDF/DDF_DataCommands.cxx" )
    SOURCE_GROUP (DDF FILES "${BUILD_PATCH_DIR}//src/DDF/DDF_DataCommands.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/DDF/DDF_DataCommands.cxx")
      list( APPEND TKDCAF_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/DDF/DDF_DataCommands.cxx" )
      SOURCE_GROUP (DDF FILES "${CMAKE_SOURCE_DIR}//src/DDF/DDF_DataCommands.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/DDF/DDF_IOStream.cxx")
    list( APPEND TKDCAF_USED_SRCFILES "${BUILD_PATCH_DIR}//src/DDF/DDF_IOStream.cxx" )
    SOURCE_GROUP (DDF FILES "${BUILD_PATCH_DIR}//src/DDF/DDF_IOStream.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/DDF/DDF_IOStream.cxx")
      list( APPEND TKDCAF_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/DDF/DDF_IOStream.cxx" )
      SOURCE_GROUP (DDF FILES "${CMAKE_SOURCE_DIR}//src/DDF/DDF_IOStream.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/DDF/DDF_Transaction.cxx")
    list( APPEND TKDCAF_USED_SRCFILES "${BUILD_PATCH_DIR}//src/DDF/DDF_Transaction.cxx" )
    SOURCE_GROUP (DDF FILES "${BUILD_PATCH_DIR}//src/DDF/DDF_Transaction.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/DDF/DDF_Transaction.cxx")
      list( APPEND TKDCAF_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/DDF/DDF_Transaction.cxx" )
      SOURCE_GROUP (DDF FILES "${CMAKE_SOURCE_DIR}//src/DDF/DDF_Transaction.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/DDF/DDF_TransactionCommands.cxx")
    list( APPEND TKDCAF_USED_SRCFILES "${BUILD_PATCH_DIR}//src/DDF/DDF_TransactionCommands.cxx" )
    SOURCE_GROUP (DDF FILES "${BUILD_PATCH_DIR}//src/DDF/DDF_TransactionCommands.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/DDF/DDF_TransactionCommands.cxx")
      list( APPEND TKDCAF_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/DDF/DDF_TransactionCommands.cxx" )
      SOURCE_GROUP (DDF FILES "${CMAKE_SOURCE_DIR}//src/DDF/DDF_TransactionCommands.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/DDocStd/DDocStd.cxx")
    list( APPEND TKDCAF_USED_SRCFILES "${BUILD_PATCH_DIR}//src/DDocStd/DDocStd.cxx" )
    SOURCE_GROUP (DDocStd FILES "${BUILD_PATCH_DIR}//src/DDocStd/DDocStd.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/DDocStd/DDocStd.cxx")
      list( APPEND TKDCAF_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/DDocStd/DDocStd.cxx" )
      SOURCE_GROUP (DDocStd FILES "${CMAKE_SOURCE_DIR}//src/DDocStd/DDocStd.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/DDocStd/DDocStd_ApplicationCommands.cxx")
    list( APPEND TKDCAF_USED_SRCFILES "${BUILD_PATCH_DIR}//src/DDocStd/DDocStd_ApplicationCommands.cxx" )
    SOURCE_GROUP (DDocStd FILES "${BUILD_PATCH_DIR}//src/DDocStd/DDocStd_ApplicationCommands.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/DDocStd/DDocStd_ApplicationCommands.cxx")
      list( APPEND TKDCAF_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/DDocStd/DDocStd_ApplicationCommands.cxx" )
      SOURCE_GROUP (DDocStd FILES "${CMAKE_SOURCE_DIR}//src/DDocStd/DDocStd_ApplicationCommands.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/DDocStd/DDocStd_DocumentCommands.cxx")
    list( APPEND TKDCAF_USED_SRCFILES "${BUILD_PATCH_DIR}//src/DDocStd/DDocStd_DocumentCommands.cxx" )
    SOURCE_GROUP (DDocStd FILES "${BUILD_PATCH_DIR}//src/DDocStd/DDocStd_DocumentCommands.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/DDocStd/DDocStd_DocumentCommands.cxx")
      list( APPEND TKDCAF_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/DDocStd/DDocStd_DocumentCommands.cxx" )
      SOURCE_GROUP (DDocStd FILES "${CMAKE_SOURCE_DIR}//src/DDocStd/DDocStd_DocumentCommands.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/DDocStd/DDocStd_DrawDocument.cxx")
    list( APPEND TKDCAF_USED_SRCFILES "${BUILD_PATCH_DIR}//src/DDocStd/DDocStd_DrawDocument.cxx" )
    SOURCE_GROUP (DDocStd FILES "${BUILD_PATCH_DIR}//src/DDocStd/DDocStd_DrawDocument.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/DDocStd/DDocStd_DrawDocument.cxx")
      list( APPEND TKDCAF_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/DDocStd/DDocStd_DrawDocument.cxx" )
      SOURCE_GROUP (DDocStd FILES "${CMAKE_SOURCE_DIR}//src/DDocStd/DDocStd_DrawDocument.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/DDocStd/DDocStd_MTMCommands.cxx")
    list( APPEND TKDCAF_USED_SRCFILES "${BUILD_PATCH_DIR}//src/DDocStd/DDocStd_MTMCommands.cxx" )
    SOURCE_GROUP (DDocStd FILES "${BUILD_PATCH_DIR}//src/DDocStd/DDocStd_MTMCommands.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/DDocStd/DDocStd_MTMCommands.cxx")
      list( APPEND TKDCAF_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/DDocStd/DDocStd_MTMCommands.cxx" )
      SOURCE_GROUP (DDocStd FILES "${CMAKE_SOURCE_DIR}//src/DDocStd/DDocStd_MTMCommands.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/DDocStd/DDocStd_ToolsCommands.cxx")
    list( APPEND TKDCAF_USED_SRCFILES "${BUILD_PATCH_DIR}//src/DDocStd/DDocStd_ToolsCommands.cxx" )
    SOURCE_GROUP (DDocStd FILES "${BUILD_PATCH_DIR}//src/DDocStd/DDocStd_ToolsCommands.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/DDocStd/DDocStd_ToolsCommands.cxx")
      list( APPEND TKDCAF_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/DDocStd/DDocStd_ToolsCommands.cxx" )
      SOURCE_GROUP (DDocStd FILES "${CMAKE_SOURCE_DIR}//src/DDocStd/DDocStd_ToolsCommands.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//drv/DNaming/DNaming_DataMapIteratorOfDataMapOfShapeOfName_0.cxx")
    list( APPEND TKDCAF_USED_SRCFILES "${BUILD_PATCH_DIR}//drv/DNaming/DNaming_DataMapIteratorOfDataMapOfShapeOfName_0.cxx" )
    SOURCE_GROUP (DNaming FILES "${BUILD_PATCH_DIR}//drv/DNaming/DNaming_DataMapIteratorOfDataMapOfShapeOfName_0.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//drv/DNaming/DNaming_DataMapIteratorOfDataMapOfShapeOfName_0.cxx")
      list( APPEND TKDCAF_USED_SRCFILES "${CMAKE_SOURCE_DIR}//drv/DNaming/DNaming_DataMapIteratorOfDataMapOfShapeOfName_0.cxx" )
      SOURCE_GROUP (DNaming FILES "${CMAKE_SOURCE_DIR}//drv/DNaming/DNaming_DataMapIteratorOfDataMapOfShapeOfName_0.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//drv/DNaming/DNaming_DataMapNodeOfDataMapOfShapeOfName_0.cxx")
    list( APPEND TKDCAF_USED_SRCFILES "${BUILD_PATCH_DIR}//drv/DNaming/DNaming_DataMapNodeOfDataMapOfShapeOfName_0.cxx" )
    SOURCE_GROUP (DNaming FILES "${BUILD_PATCH_DIR}//drv/DNaming/DNaming_DataMapNodeOfDataMapOfShapeOfName_0.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//drv/DNaming/DNaming_DataMapNodeOfDataMapOfShapeOfName_0.cxx")
      list( APPEND TKDCAF_USED_SRCFILES "${CMAKE_SOURCE_DIR}//drv/DNaming/DNaming_DataMapNodeOfDataMapOfShapeOfName_0.cxx" )
      SOURCE_GROUP (DNaming FILES "${CMAKE_SOURCE_DIR}//drv/DNaming/DNaming_DataMapNodeOfDataMapOfShapeOfName_0.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//drv/DNaming/DNaming_DataMapOfShapeOfName_0.cxx")
    list( APPEND TKDCAF_USED_SRCFILES "${BUILD_PATCH_DIR}//drv/DNaming/DNaming_DataMapOfShapeOfName_0.cxx" )
    SOURCE_GROUP (DNaming FILES "${BUILD_PATCH_DIR}//drv/DNaming/DNaming_DataMapOfShapeOfName_0.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//drv/DNaming/DNaming_DataMapOfShapeOfName_0.cxx")
      list( APPEND TKDCAF_USED_SRCFILES "${CMAKE_SOURCE_DIR}//drv/DNaming/DNaming_DataMapOfShapeOfName_0.cxx" )
      SOURCE_GROUP (DNaming FILES "${CMAKE_SOURCE_DIR}//drv/DNaming/DNaming_DataMapOfShapeOfName_0.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/DNaming/DNaming.cxx")
    list( APPEND TKDCAF_USED_SRCFILES "${BUILD_PATCH_DIR}//src/DNaming/DNaming.cxx" )
    SOURCE_GROUP (DNaming FILES "${BUILD_PATCH_DIR}//src/DNaming/DNaming.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/DNaming/DNaming.cxx")
      list( APPEND TKDCAF_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/DNaming/DNaming.cxx" )
      SOURCE_GROUP (DNaming FILES "${CMAKE_SOURCE_DIR}//src/DNaming/DNaming.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/DNaming/DNaming_BasicCommands.cxx")
    list( APPEND TKDCAF_USED_SRCFILES "${BUILD_PATCH_DIR}//src/DNaming/DNaming_BasicCommands.cxx" )
    SOURCE_GROUP (DNaming FILES "${BUILD_PATCH_DIR}//src/DNaming/DNaming_BasicCommands.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/DNaming/DNaming_BasicCommands.cxx")
      list( APPEND TKDCAF_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/DNaming/DNaming_BasicCommands.cxx" )
      SOURCE_GROUP (DNaming FILES "${CMAKE_SOURCE_DIR}//src/DNaming/DNaming_BasicCommands.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/DNaming/DNaming_BooleanOperationDriver.cxx")
    list( APPEND TKDCAF_USED_SRCFILES "${BUILD_PATCH_DIR}//src/DNaming/DNaming_BooleanOperationDriver.cxx" )
    SOURCE_GROUP (DNaming FILES "${BUILD_PATCH_DIR}//src/DNaming/DNaming_BooleanOperationDriver.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/DNaming/DNaming_BooleanOperationDriver.cxx")
      list( APPEND TKDCAF_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/DNaming/DNaming_BooleanOperationDriver.cxx" )
      SOURCE_GROUP (DNaming FILES "${CMAKE_SOURCE_DIR}//src/DNaming/DNaming_BooleanOperationDriver.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/DNaming/DNaming_BoxDriver.cxx")
    list( APPEND TKDCAF_USED_SRCFILES "${BUILD_PATCH_DIR}//src/DNaming/DNaming_BoxDriver.cxx" )
    SOURCE_GROUP (DNaming FILES "${BUILD_PATCH_DIR}//src/DNaming/DNaming_BoxDriver.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/DNaming/DNaming_BoxDriver.cxx")
      list( APPEND TKDCAF_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/DNaming/DNaming_BoxDriver.cxx" )
      SOURCE_GROUP (DNaming FILES "${CMAKE_SOURCE_DIR}//src/DNaming/DNaming_BoxDriver.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/DNaming/DNaming_CylinderDriver.cxx")
    list( APPEND TKDCAF_USED_SRCFILES "${BUILD_PATCH_DIR}//src/DNaming/DNaming_CylinderDriver.cxx" )
    SOURCE_GROUP (DNaming FILES "${BUILD_PATCH_DIR}//src/DNaming/DNaming_CylinderDriver.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/DNaming/DNaming_CylinderDriver.cxx")
      list( APPEND TKDCAF_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/DNaming/DNaming_CylinderDriver.cxx" )
      SOURCE_GROUP (DNaming FILES "${CMAKE_SOURCE_DIR}//src/DNaming/DNaming_CylinderDriver.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/DNaming/DNaming_FilletDriver.cxx")
    list( APPEND TKDCAF_USED_SRCFILES "${BUILD_PATCH_DIR}//src/DNaming/DNaming_FilletDriver.cxx" )
    SOURCE_GROUP (DNaming FILES "${BUILD_PATCH_DIR}//src/DNaming/DNaming_FilletDriver.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/DNaming/DNaming_FilletDriver.cxx")
      list( APPEND TKDCAF_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/DNaming/DNaming_FilletDriver.cxx" )
      SOURCE_GROUP (DNaming FILES "${CMAKE_SOURCE_DIR}//src/DNaming/DNaming_FilletDriver.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/DNaming/DNaming_Line3DDriver.cxx")
    list( APPEND TKDCAF_USED_SRCFILES "${BUILD_PATCH_DIR}//src/DNaming/DNaming_Line3DDriver.cxx" )
    SOURCE_GROUP (DNaming FILES "${BUILD_PATCH_DIR}//src/DNaming/DNaming_Line3DDriver.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/DNaming/DNaming_Line3DDriver.cxx")
      list( APPEND TKDCAF_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/DNaming/DNaming_Line3DDriver.cxx" )
      SOURCE_GROUP (DNaming FILES "${CMAKE_SOURCE_DIR}//src/DNaming/DNaming_Line3DDriver.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/DNaming/DNaming_ModelingCommands.cxx")
    list( APPEND TKDCAF_USED_SRCFILES "${BUILD_PATCH_DIR}//src/DNaming/DNaming_ModelingCommands.cxx" )
    SOURCE_GROUP (DNaming FILES "${BUILD_PATCH_DIR}//src/DNaming/DNaming_ModelingCommands.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/DNaming/DNaming_ModelingCommands.cxx")
      list( APPEND TKDCAF_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/DNaming/DNaming_ModelingCommands.cxx" )
      SOURCE_GROUP (DNaming FILES "${CMAKE_SOURCE_DIR}//src/DNaming/DNaming_ModelingCommands.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/DNaming/DNaming_PointDriver.cxx")
    list( APPEND TKDCAF_USED_SRCFILES "${BUILD_PATCH_DIR}//src/DNaming/DNaming_PointDriver.cxx" )
    SOURCE_GROUP (DNaming FILES "${BUILD_PATCH_DIR}//src/DNaming/DNaming_PointDriver.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/DNaming/DNaming_PointDriver.cxx")
      list( APPEND TKDCAF_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/DNaming/DNaming_PointDriver.cxx" )
      SOURCE_GROUP (DNaming FILES "${CMAKE_SOURCE_DIR}//src/DNaming/DNaming_PointDriver.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/DNaming/DNaming_PrismDriver.cxx")
    list( APPEND TKDCAF_USED_SRCFILES "${BUILD_PATCH_DIR}//src/DNaming/DNaming_PrismDriver.cxx" )
    SOURCE_GROUP (DNaming FILES "${BUILD_PATCH_DIR}//src/DNaming/DNaming_PrismDriver.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/DNaming/DNaming_PrismDriver.cxx")
      list( APPEND TKDCAF_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/DNaming/DNaming_PrismDriver.cxx" )
      SOURCE_GROUP (DNaming FILES "${CMAKE_SOURCE_DIR}//src/DNaming/DNaming_PrismDriver.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/DNaming/DNaming_RevolutionDriver.cxx")
    list( APPEND TKDCAF_USED_SRCFILES "${BUILD_PATCH_DIR}//src/DNaming/DNaming_RevolutionDriver.cxx" )
    SOURCE_GROUP (DNaming FILES "${BUILD_PATCH_DIR}//src/DNaming/DNaming_RevolutionDriver.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/DNaming/DNaming_RevolutionDriver.cxx")
      list( APPEND TKDCAF_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/DNaming/DNaming_RevolutionDriver.cxx" )
      SOURCE_GROUP (DNaming FILES "${CMAKE_SOURCE_DIR}//src/DNaming/DNaming_RevolutionDriver.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/DNaming/DNaming_SelectionCommands.cxx")
    list( APPEND TKDCAF_USED_SRCFILES "${BUILD_PATCH_DIR}//src/DNaming/DNaming_SelectionCommands.cxx" )
    SOURCE_GROUP (DNaming FILES "${BUILD_PATCH_DIR}//src/DNaming/DNaming_SelectionCommands.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/DNaming/DNaming_SelectionCommands.cxx")
      list( APPEND TKDCAF_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/DNaming/DNaming_SelectionCommands.cxx" )
      SOURCE_GROUP (DNaming FILES "${CMAKE_SOURCE_DIR}//src/DNaming/DNaming_SelectionCommands.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/DNaming/DNaming_SelectionDriver.cxx")
    list( APPEND TKDCAF_USED_SRCFILES "${BUILD_PATCH_DIR}//src/DNaming/DNaming_SelectionDriver.cxx" )
    SOURCE_GROUP (DNaming FILES "${BUILD_PATCH_DIR}//src/DNaming/DNaming_SelectionDriver.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/DNaming/DNaming_SelectionDriver.cxx")
      list( APPEND TKDCAF_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/DNaming/DNaming_SelectionDriver.cxx" )
      SOURCE_GROUP (DNaming FILES "${CMAKE_SOURCE_DIR}//src/DNaming/DNaming_SelectionDriver.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/DNaming/DNaming_SphereDriver.cxx")
    list( APPEND TKDCAF_USED_SRCFILES "${BUILD_PATCH_DIR}//src/DNaming/DNaming_SphereDriver.cxx" )
    SOURCE_GROUP (DNaming FILES "${BUILD_PATCH_DIR}//src/DNaming/DNaming_SphereDriver.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/DNaming/DNaming_SphereDriver.cxx")
      list( APPEND TKDCAF_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/DNaming/DNaming_SphereDriver.cxx" )
      SOURCE_GROUP (DNaming FILES "${CMAKE_SOURCE_DIR}//src/DNaming/DNaming_SphereDriver.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/DNaming/DNaming_ToolsCommands.cxx")
    list( APPEND TKDCAF_USED_SRCFILES "${BUILD_PATCH_DIR}//src/DNaming/DNaming_ToolsCommands.cxx" )
    SOURCE_GROUP (DNaming FILES "${BUILD_PATCH_DIR}//src/DNaming/DNaming_ToolsCommands.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/DNaming/DNaming_ToolsCommands.cxx")
      list( APPEND TKDCAF_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/DNaming/DNaming_ToolsCommands.cxx" )
      SOURCE_GROUP (DNaming FILES "${CMAKE_SOURCE_DIR}//src/DNaming/DNaming_ToolsCommands.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/DNaming/DNaming_TransformationDriver.cxx")
    list( APPEND TKDCAF_USED_SRCFILES "${BUILD_PATCH_DIR}//src/DNaming/DNaming_TransformationDriver.cxx" )
    SOURCE_GROUP (DNaming FILES "${BUILD_PATCH_DIR}//src/DNaming/DNaming_TransformationDriver.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/DNaming/DNaming_TransformationDriver.cxx")
      list( APPEND TKDCAF_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/DNaming/DNaming_TransformationDriver.cxx" )
      SOURCE_GROUP (DNaming FILES "${CMAKE_SOURCE_DIR}//src/DNaming/DNaming_TransformationDriver.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/DDataStd/DDataStd.cxx")
    list( APPEND TKDCAF_USED_SRCFILES "${BUILD_PATCH_DIR}//src/DDataStd/DDataStd.cxx" )
    SOURCE_GROUP (DDataStd FILES "${BUILD_PATCH_DIR}//src/DDataStd/DDataStd.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/DDataStd/DDataStd.cxx")
      list( APPEND TKDCAF_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/DDataStd/DDataStd.cxx" )
      SOURCE_GROUP (DDataStd FILES "${CMAKE_SOURCE_DIR}//src/DDataStd/DDataStd.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/DDataStd/DDataStd_BasicCommands.cxx")
    list( APPEND TKDCAF_USED_SRCFILES "${BUILD_PATCH_DIR}//src/DDataStd/DDataStd_BasicCommands.cxx" )
    SOURCE_GROUP (DDataStd FILES "${BUILD_PATCH_DIR}//src/DDataStd/DDataStd_BasicCommands.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/DDataStd/DDataStd_BasicCommands.cxx")
      list( APPEND TKDCAF_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/DDataStd/DDataStd_BasicCommands.cxx" )
      SOURCE_GROUP (DDataStd FILES "${CMAKE_SOURCE_DIR}//src/DDataStd/DDataStd_BasicCommands.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/DDataStd/DDataStd_ConstraintCommands.cxx")
    list( APPEND TKDCAF_USED_SRCFILES "${BUILD_PATCH_DIR}//src/DDataStd/DDataStd_ConstraintCommands.cxx" )
    SOURCE_GROUP (DDataStd FILES "${BUILD_PATCH_DIR}//src/DDataStd/DDataStd_ConstraintCommands.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/DDataStd/DDataStd_ConstraintCommands.cxx")
      list( APPEND TKDCAF_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/DDataStd/DDataStd_ConstraintCommands.cxx" )
      SOURCE_GROUP (DDataStd FILES "${CMAKE_SOURCE_DIR}//src/DDataStd/DDataStd_ConstraintCommands.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/DDataStd/DDataStd_DatumCommands.cxx")
    list( APPEND TKDCAF_USED_SRCFILES "${BUILD_PATCH_DIR}//src/DDataStd/DDataStd_DatumCommands.cxx" )
    SOURCE_GROUP (DDataStd FILES "${BUILD_PATCH_DIR}//src/DDataStd/DDataStd_DatumCommands.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/DDataStd/DDataStd_DatumCommands.cxx")
      list( APPEND TKDCAF_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/DDataStd/DDataStd_DatumCommands.cxx" )
      SOURCE_GROUP (DDataStd FILES "${CMAKE_SOURCE_DIR}//src/DDataStd/DDataStd_DatumCommands.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/DDataStd/DDataStd_DrawDisplayCommands.cxx")
    list( APPEND TKDCAF_USED_SRCFILES "${BUILD_PATCH_DIR}//src/DDataStd/DDataStd_DrawDisplayCommands.cxx" )
    SOURCE_GROUP (DDataStd FILES "${BUILD_PATCH_DIR}//src/DDataStd/DDataStd_DrawDisplayCommands.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/DDataStd/DDataStd_DrawDisplayCommands.cxx")
      list( APPEND TKDCAF_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/DDataStd/DDataStd_DrawDisplayCommands.cxx" )
      SOURCE_GROUP (DDataStd FILES "${CMAKE_SOURCE_DIR}//src/DDataStd/DDataStd_DrawDisplayCommands.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/DDataStd/DDataStd_DrawDriver.cxx")
    list( APPEND TKDCAF_USED_SRCFILES "${BUILD_PATCH_DIR}//src/DDataStd/DDataStd_DrawDriver.cxx" )
    SOURCE_GROUP (DDataStd FILES "${BUILD_PATCH_DIR}//src/DDataStd/DDataStd_DrawDriver.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/DDataStd/DDataStd_DrawDriver.cxx")
      list( APPEND TKDCAF_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/DDataStd/DDataStd_DrawDriver.cxx" )
      SOURCE_GROUP (DDataStd FILES "${CMAKE_SOURCE_DIR}//src/DDataStd/DDataStd_DrawDriver.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/DDataStd/DDataStd_DrawPresentation.cxx")
    list( APPEND TKDCAF_USED_SRCFILES "${BUILD_PATCH_DIR}//src/DDataStd/DDataStd_DrawPresentation.cxx" )
    SOURCE_GROUP (DDataStd FILES "${BUILD_PATCH_DIR}//src/DDataStd/DDataStd_DrawPresentation.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/DDataStd/DDataStd_DrawPresentation.cxx")
      list( APPEND TKDCAF_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/DDataStd/DDataStd_DrawPresentation.cxx" )
      SOURCE_GROUP (DDataStd FILES "${CMAKE_SOURCE_DIR}//src/DDataStd/DDataStd_DrawPresentation.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/DDataStd/DDataStd_NameCommands.cxx")
    list( APPEND TKDCAF_USED_SRCFILES "${BUILD_PATCH_DIR}//src/DDataStd/DDataStd_NameCommands.cxx" )
    SOURCE_GROUP (DDataStd FILES "${BUILD_PATCH_DIR}//src/DDataStd/DDataStd_NameCommands.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/DDataStd/DDataStd_NameCommands.cxx")
      list( APPEND TKDCAF_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/DDataStd/DDataStd_NameCommands.cxx" )
      SOURCE_GROUP (DDataStd FILES "${CMAKE_SOURCE_DIR}//src/DDataStd/DDataStd_NameCommands.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/DDataStd/DDataStd_NamedShapeCommands.cxx")
    list( APPEND TKDCAF_USED_SRCFILES "${BUILD_PATCH_DIR}//src/DDataStd/DDataStd_NamedShapeCommands.cxx" )
    SOURCE_GROUP (DDataStd FILES "${BUILD_PATCH_DIR}//src/DDataStd/DDataStd_NamedShapeCommands.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/DDataStd/DDataStd_NamedShapeCommands.cxx")
      list( APPEND TKDCAF_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/DDataStd/DDataStd_NamedShapeCommands.cxx" )
      SOURCE_GROUP (DDataStd FILES "${CMAKE_SOURCE_DIR}//src/DDataStd/DDataStd_NamedShapeCommands.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/DDataStd/DDataStd_ObjectCommands.cxx")
    list( APPEND TKDCAF_USED_SRCFILES "${BUILD_PATCH_DIR}//src/DDataStd/DDataStd_ObjectCommands.cxx" )
    SOURCE_GROUP (DDataStd FILES "${BUILD_PATCH_DIR}//src/DDataStd/DDataStd_ObjectCommands.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/DDataStd/DDataStd_ObjectCommands.cxx")
      list( APPEND TKDCAF_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/DDataStd/DDataStd_ObjectCommands.cxx" )
      SOURCE_GROUP (DDataStd FILES "${CMAKE_SOURCE_DIR}//src/DDataStd/DDataStd_ObjectCommands.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/DDataStd/DDataStd_TreeBrowser.cxx")
    list( APPEND TKDCAF_USED_SRCFILES "${BUILD_PATCH_DIR}//src/DDataStd/DDataStd_TreeBrowser.cxx" )
    SOURCE_GROUP (DDataStd FILES "${BUILD_PATCH_DIR}//src/DDataStd/DDataStd_TreeBrowser.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/DDataStd/DDataStd_TreeBrowser.cxx")
      list( APPEND TKDCAF_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/DDataStd/DDataStd_TreeBrowser.cxx" )
      SOURCE_GROUP (DDataStd FILES "${CMAKE_SOURCE_DIR}//src/DDataStd/DDataStd_TreeBrowser.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/DDataStd/DDataStd_TreeCommands.cxx")
    list( APPEND TKDCAF_USED_SRCFILES "${BUILD_PATCH_DIR}//src/DDataStd/DDataStd_TreeCommands.cxx" )
    SOURCE_GROUP (DDataStd FILES "${BUILD_PATCH_DIR}//src/DDataStd/DDataStd_TreeCommands.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/DDataStd/DDataStd_TreeCommands.cxx")
      list( APPEND TKDCAF_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/DDataStd/DDataStd_TreeCommands.cxx" )
      SOURCE_GROUP (DDataStd FILES "${CMAKE_SOURCE_DIR}//src/DDataStd/DDataStd_TreeCommands.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/DPrsStd/DPrsStd.cxx")
    list( APPEND TKDCAF_USED_SRCFILES "${BUILD_PATCH_DIR}//src/DPrsStd/DPrsStd.cxx" )
    SOURCE_GROUP (DPrsStd FILES "${BUILD_PATCH_DIR}//src/DPrsStd/DPrsStd.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/DPrsStd/DPrsStd.cxx")
      list( APPEND TKDCAF_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/DPrsStd/DPrsStd.cxx" )
      SOURCE_GROUP (DPrsStd FILES "${CMAKE_SOURCE_DIR}//src/DPrsStd/DPrsStd.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/DPrsStd/DPrsStd_AISPresentationCommands.cxx")
    list( APPEND TKDCAF_USED_SRCFILES "${BUILD_PATCH_DIR}//src/DPrsStd/DPrsStd_AISPresentationCommands.cxx" )
    SOURCE_GROUP (DPrsStd FILES "${BUILD_PATCH_DIR}//src/DPrsStd/DPrsStd_AISPresentationCommands.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/DPrsStd/DPrsStd_AISPresentationCommands.cxx")
      list( APPEND TKDCAF_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/DPrsStd/DPrsStd_AISPresentationCommands.cxx" )
      SOURCE_GROUP (DPrsStd FILES "${CMAKE_SOURCE_DIR}//src/DPrsStd/DPrsStd_AISPresentationCommands.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/DPrsStd/DPrsStd_AISViewerCommands.cxx")
    list( APPEND TKDCAF_USED_SRCFILES "${BUILD_PATCH_DIR}//src/DPrsStd/DPrsStd_AISViewerCommands.cxx" )
    SOURCE_GROUP (DPrsStd FILES "${BUILD_PATCH_DIR}//src/DPrsStd/DPrsStd_AISViewerCommands.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/DPrsStd/DPrsStd_AISViewerCommands.cxx")
      list( APPEND TKDCAF_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/DPrsStd/DPrsStd_AISViewerCommands.cxx" )
      SOURCE_GROUP (DPrsStd FILES "${CMAKE_SOURCE_DIR}//src/DPrsStd/DPrsStd_AISViewerCommands.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/DrawDim/DrawDim.cxx")
    list( APPEND TKDCAF_USED_SRCFILES "${BUILD_PATCH_DIR}//src/DrawDim/DrawDim.cxx" )
    SOURCE_GROUP (DrawDim FILES "${BUILD_PATCH_DIR}//src/DrawDim/DrawDim.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/DrawDim/DrawDim.cxx")
      list( APPEND TKDCAF_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/DrawDim/DrawDim.cxx" )
      SOURCE_GROUP (DrawDim FILES "${CMAKE_SOURCE_DIR}//src/DrawDim/DrawDim.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/DrawDim/DrawDim_Angle.cxx")
    list( APPEND TKDCAF_USED_SRCFILES "${BUILD_PATCH_DIR}//src/DrawDim/DrawDim_Angle.cxx" )
    SOURCE_GROUP (DrawDim FILES "${BUILD_PATCH_DIR}//src/DrawDim/DrawDim_Angle.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/DrawDim/DrawDim_Angle.cxx")
      list( APPEND TKDCAF_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/DrawDim/DrawDim_Angle.cxx" )
      SOURCE_GROUP (DrawDim FILES "${CMAKE_SOURCE_DIR}//src/DrawDim/DrawDim_Angle.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/DrawDim/DrawDim_Dimension.cxx")
    list( APPEND TKDCAF_USED_SRCFILES "${BUILD_PATCH_DIR}//src/DrawDim/DrawDim_Dimension.cxx" )
    SOURCE_GROUP (DrawDim FILES "${BUILD_PATCH_DIR}//src/DrawDim/DrawDim_Dimension.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/DrawDim/DrawDim_Dimension.cxx")
      list( APPEND TKDCAF_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/DrawDim/DrawDim_Dimension.cxx" )
      SOURCE_GROUP (DrawDim FILES "${CMAKE_SOURCE_DIR}//src/DrawDim/DrawDim_Dimension.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/DrawDim/DrawDim_Distance.cxx")
    list( APPEND TKDCAF_USED_SRCFILES "${BUILD_PATCH_DIR}//src/DrawDim/DrawDim_Distance.cxx" )
    SOURCE_GROUP (DrawDim FILES "${BUILD_PATCH_DIR}//src/DrawDim/DrawDim_Distance.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/DrawDim/DrawDim_Distance.cxx")
      list( APPEND TKDCAF_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/DrawDim/DrawDim_Distance.cxx" )
      SOURCE_GROUP (DrawDim FILES "${CMAKE_SOURCE_DIR}//src/DrawDim/DrawDim_Distance.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/DrawDim/DrawDim_PlanarAngle.cxx")
    list( APPEND TKDCAF_USED_SRCFILES "${BUILD_PATCH_DIR}//src/DrawDim/DrawDim_PlanarAngle.cxx" )
    SOURCE_GROUP (DrawDim FILES "${BUILD_PATCH_DIR}//src/DrawDim/DrawDim_PlanarAngle.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/DrawDim/DrawDim_PlanarAngle.cxx")
      list( APPEND TKDCAF_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/DrawDim/DrawDim_PlanarAngle.cxx" )
      SOURCE_GROUP (DrawDim FILES "${CMAKE_SOURCE_DIR}//src/DrawDim/DrawDim_PlanarAngle.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/DrawDim/DrawDim_PlanarDiameter.cxx")
    list( APPEND TKDCAF_USED_SRCFILES "${BUILD_PATCH_DIR}//src/DrawDim/DrawDim_PlanarDiameter.cxx" )
    SOURCE_GROUP (DrawDim FILES "${BUILD_PATCH_DIR}//src/DrawDim/DrawDim_PlanarDiameter.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/DrawDim/DrawDim_PlanarDiameter.cxx")
      list( APPEND TKDCAF_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/DrawDim/DrawDim_PlanarDiameter.cxx" )
      SOURCE_GROUP (DrawDim FILES "${CMAKE_SOURCE_DIR}//src/DrawDim/DrawDim_PlanarDiameter.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/DrawDim/DrawDim_PlanarDimension.cxx")
    list( APPEND TKDCAF_USED_SRCFILES "${BUILD_PATCH_DIR}//src/DrawDim/DrawDim_PlanarDimension.cxx" )
    SOURCE_GROUP (DrawDim FILES "${BUILD_PATCH_DIR}//src/DrawDim/DrawDim_PlanarDimension.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/DrawDim/DrawDim_PlanarDimension.cxx")
      list( APPEND TKDCAF_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/DrawDim/DrawDim_PlanarDimension.cxx" )
      SOURCE_GROUP (DrawDim FILES "${CMAKE_SOURCE_DIR}//src/DrawDim/DrawDim_PlanarDimension.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/DrawDim/DrawDim_PlanarDimensionCommands.cxx")
    list( APPEND TKDCAF_USED_SRCFILES "${BUILD_PATCH_DIR}//src/DrawDim/DrawDim_PlanarDimensionCommands.cxx" )
    SOURCE_GROUP (DrawDim FILES "${BUILD_PATCH_DIR}//src/DrawDim/DrawDim_PlanarDimensionCommands.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/DrawDim/DrawDim_PlanarDimensionCommands.cxx")
      list( APPEND TKDCAF_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/DrawDim/DrawDim_PlanarDimensionCommands.cxx" )
      SOURCE_GROUP (DrawDim FILES "${CMAKE_SOURCE_DIR}//src/DrawDim/DrawDim_PlanarDimensionCommands.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/DrawDim/DrawDim_PlanarDistance.cxx")
    list( APPEND TKDCAF_USED_SRCFILES "${BUILD_PATCH_DIR}//src/DrawDim/DrawDim_PlanarDistance.cxx" )
    SOURCE_GROUP (DrawDim FILES "${BUILD_PATCH_DIR}//src/DrawDim/DrawDim_PlanarDistance.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/DrawDim/DrawDim_PlanarDistance.cxx")
      list( APPEND TKDCAF_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/DrawDim/DrawDim_PlanarDistance.cxx" )
      SOURCE_GROUP (DrawDim FILES "${CMAKE_SOURCE_DIR}//src/DrawDim/DrawDim_PlanarDistance.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/DrawDim/DrawDim_PlanarRadius.cxx")
    list( APPEND TKDCAF_USED_SRCFILES "${BUILD_PATCH_DIR}//src/DrawDim/DrawDim_PlanarRadius.cxx" )
    SOURCE_GROUP (DrawDim FILES "${BUILD_PATCH_DIR}//src/DrawDim/DrawDim_PlanarRadius.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/DrawDim/DrawDim_PlanarRadius.cxx")
      list( APPEND TKDCAF_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/DrawDim/DrawDim_PlanarRadius.cxx" )
      SOURCE_GROUP (DrawDim FILES "${CMAKE_SOURCE_DIR}//src/DrawDim/DrawDim_PlanarRadius.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/DrawDim/DrawDim_Radius.cxx")
    list( APPEND TKDCAF_USED_SRCFILES "${BUILD_PATCH_DIR}//src/DrawDim/DrawDim_Radius.cxx" )
    SOURCE_GROUP (DrawDim FILES "${BUILD_PATCH_DIR}//src/DrawDim/DrawDim_Radius.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/DrawDim/DrawDim_Radius.cxx")
      list( APPEND TKDCAF_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/DrawDim/DrawDim_Radius.cxx" )
      SOURCE_GROUP (DrawDim FILES "${CMAKE_SOURCE_DIR}//src/DrawDim/DrawDim_Radius.cxx")
    ENDIF()
  ENDIF()


IF (WIN32)
ELSE()

  IF (APPLE)

  ENDIF()

ENDIF()

if ("${USED_TOOLKITS}" STREQUAL "" OR DEFINED TurnONtheTKDCAF)
 add_library( TKDCAF SHARED ${TKDCAF_USED_SRCFILES} )

 set_property(TARGET TKDCAF PROPERTY FOLDER Draw)

 install( TARGETS TKDCAF
                                 RUNTIME DESTINATION "${INSTALL_DIR}/${OS_WITH_BIT}/${COMPILER}/bin${BUILD_POSTFIX}"
                                 ARCHIVE DESTINATION "${INSTALL_DIR}/${OS_WITH_BIT}/${COMPILER}/lib${BUILD_POSTFIX}"
                                 LIBRARY DESTINATION "${INSTALL_DIR}/${OS_WITH_BIT}/${COMPILER}/lib${BUILD_POSTFIX}")

 if (MSVC)
  install( FILES  ${CMAKE_BINARY_DIR}/out/bind/Debug/TKDCAF.pdb CONFIGURATIONS Debug
                                  DESTINATION "${INSTALL_DIR}/${OS_WITH_BIT}/${COMPILER}/bin${BUILD_POSTFIX}")
 endif()


 set_target_properties( TKDCAF PROPERTIES COMPILE_FLAGS "${TKDCAF_PRECOMPILED_DEFS}" )
 include_directories( ${TKDCAF_COMPILER_DIRECTORIES} )
 target_link_libraries( TKDCAF ${TKDCAF_USED_LIBS} )
endif()
